packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/parse_errors/missing_pkgbase.srcinfo
# Immediately start with the pkgname. A pkgbase is required first.
pkgname = test
	desc = "Test library"

